// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Gwen's sendEvent destination action: all fields 1`] = `
Object {
  "operationName": "SendEvent",
  "query": "mutation SendEvent($userId: UUID!, $type: String!, $data: JSONObject) {
 event(userId: $userId, type: $type, data: $data)
}",
  "variables": Object {
    "data": Object {
      "testType": "czPOuvItQ@bFuB",
    },
    "type": "czPOuvItQ@bFuB",
    "userId": "4af33ee2-e48a-51e1-948d-7175e99b381b",
  },
}
`;

exports[`Testing snapshot for Gwen's sendEvent destination action: required fields 1`] = `
Object {
  "operationName": "SendEvent",
  "query": "mutation SendEvent($userId: UUID!, $type: String!, $data: JSONObject) {
 event(userId: $userId, type: $type, data: $data)
}",
  "variables": Object {
    "data": Object {},
    "type": "czPOuvItQ@bFuB",
    "userId": "4af33ee2-e48a-51e1-948d-7175e99b381b",
  },
}
`;
